@@ -3,7 +3,10 @@ liblscp - LinuxSampler Control Protocol API
 
 ChangeLog
 
-CVS HEAD           Bugfix: _lscp_client_evt_proc() dropped LSCP events.
+CVS HEAD           _lscp_device_port_info_query(): take port parameter
+                   "NAME" into the result list.
+
+                   Bugfix: _lscp_client_evt_proc() dropped LSCP events.
 
                    Bugfix in lscp_client_subscribe(): only the first
                    lscp_client_subscribe() call succeeded (per client),
